feat: finish notification