@@ -5,11 +5,15 @@ import com.fpt.sccw.repository.SupplierRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 
 import java.util.List;
 import java.util.Map;
 import com.fpt.sccw.dto.response.SupplierDTO;
-import java.util.stream.Collectors;
+import com.fpt.sccw.dto.response.PageResponse;
 
 @RestController
 @RequestMapping("/api/suppliers")
@@ -19,13 +23,18 @@ public class SupplierController {
 
     private final SupplierRepository supplierRepository;
 
-    // Lấy toàn bộ danh sách từ DB và map đầy đủ qua DTO
     @GetMapping
-    public ResponseEntity<List<SupplierDTO>> getAllSuppliers() {
-        List<SupplierDTO> list = supplierRepository.findAll().stream()
+    public ResponseEntity<PageResponse<SupplierDTO>> getAllSuppliers(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "20") int size) {
+        if (page < 0 || size < 1 || size > 100) return ResponseEntity.badRequest().build();
+
+        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.ASC, "name"));
+        Page<Supplier> suppliers = supplierRepository.findAll(pageable);
+        List<SupplierDTO> content = suppliers.getContent().stream()
                 .map(SupplierDTO::fromEntity)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(list);
+                .toList();
+        return ResponseEntity.ok(new PageResponse<>(content, suppliers));
     }
 
     // Tạo mới nhà cung cấp (Đã bổ sung nhận đủ rating và onTimeDelivery từ Entity)
